--- a/CSS/contactme.css
+++ b/CSS/contactme.css
@@ -26,5 +26,11 @@ a:hover{
     width: 90%;
 }
 .facebook img{
-    width: 80%;
+    width: 70%;
+}
+
+@media screen and (max-width: 1060px){
+    .social{
+        justify-content: space-around;
+    }
 }
