--- a/CSS/career.css
+++ b/CSS/career.css
@@ -24,8 +24,12 @@ p{
     animation-duration: 1s;
     animation-iteration-count: infinite;
 }
-
-.skills div{
+.skills{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.skillscontainer{
     text-align: justify;
     padding: 15px;
     padding-left: 5px;
@@ -33,16 +37,7 @@ p{
     border-bottom: 2px solid white;
     border-radius: 10px;
     margin: 1%;
-    width: 48%;
-    position: relative;
-}
-.leftSkills{
-    float: left;
-    clear: left;
-}
-.rightSkills{
-    float: right;
-    clear: right;
+    width: 400px;
 }
 
 @keyframes blinking{
