--- a/CSS/style.css
+++ b/CSS/style.css
@@ -153,6 +153,7 @@ main{
     margin: auto;
     padding: 15px;
     padding-top: 70px;
+    text-align: justify;
 }
 .pagesTitle{
     text-align: center;
@@ -173,7 +174,6 @@ main{
     padding: 0px;
     margin-bottom: 5px;
     font-style: italic;
-    clear: both;
 }
 .foot p{
     margin: 0px;
