--- a/CSS/career.css
+++ b/CSS/career.css
@@ -7,12 +7,6 @@ a{
 h2{
    text-align: center;
 }
-.skills h3{
-    margin-top: 0px;
-}
-p{
-    margin-bottom: 0px;
-}
 .bigQuestions{
     display: flex;
     justify-content: space-between;
@@ -24,16 +18,23 @@ p{
     animation-duration: 1s;
     animation-iteration-count: infinite;
 }
-.skills{
+
+#bodycontainer{
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+    flex-wrap: wrap;
+}
+.skillsSection{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: space-between;
+    row-gap: 2.5em;
 }
-.skillscontainer{
-    padding: 15px;
-    padding-left: 5px;
-    border-right: 2px solid white;
-    border-bottom: 2px solid white;
+.skill{
+    padding: 20px;
+    box-shadow: 0px 0px 15px #833ec8;
     border-radius: 10px;
     margin: 1%;
     width: 430px;
