--- a/CSS/career.css
+++ b/CSS/career.css
@@ -18,26 +18,19 @@ h2{
     animation-duration: 1s;
     animation-iteration-count: infinite;
 }
-
-#bodycontainer{
+/* For the skills part*/
+#skillsContainer{
     display: flex;
     justify-content: space-around;
-    align-items: baseline;
     flex-wrap: wrap;
-}
-.skillsSection{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-between;
-    row-gap: 2.5em;
 }
 .skill{
+    margin: 0;
+    width: 430px;
     padding: 20px;
+    margin-bottom: 50px;
     box-shadow: 0px 0px 15px #833ec8;
     border-radius: 10px;
-    margin: 1%;
-    width: 430px;
 }
 
 @keyframes blinking{
