--- a/CSS/portifolio.css
+++ b/CSS/portifolio.css
@@ -85,6 +85,9 @@ a:hover{
 #HTML01Description{
      margin-top: 30px;
 }
+#HtmlCSS02{
+    border-color: #061130;
+}
 
 /*Javascript Projects*/
 #HtmlJS01{
