--- a/CSS/style.css
+++ b/CSS/style.css
@@ -78,7 +78,7 @@ body{
 .siteButton{
     font-size: 0.8em;
     padding: 9px 12px;
-    border-radius: 5em;
+    border-radius: 5px;
     border: none;
     cursor: pointer;
 }
